[project]
name = "elo-brasileirao"
version = "0.1.0"
description = ""
authors = [
    {name = "João",email = "oliveira.joaovtr@gmail.com"}
]
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
blue = "^0.9.1"
taskipy = "^1.14.1"

